# selenium-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .pytest.ini  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
pages/: base_page.py
pages/google/: __init__.py  google_page.py
pages/heroku/: __init__.py  dropdown_page.py  login_page.py  upload_page.py
src/: driver_factory.py  driver_manager.py
src/helpers/: execution_helper.py
tests/: conftest.py  test_google_search.py
tests/google/: test_google_search.py
tests/heroku/: test_dropdown.py  test_login.py  test_upload.py
tests/pages/: base_page.py  google_page.py
